Feat: AWS S3 활용을 위한 코드 수정
- AWSS3Config.java
- AWS S3 활용을 위한 설정 코드 작성

- MemberService.java
- 기존의 로컬에다가 유저 프로필 이미지를 저장하던 방식에서 AWS S3 버켓에다가 저장하는 방식으로 코드 수정

- build.gradle
- AWS S3, RDS 활용을 위한 의존성 추가

--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+    implementation 'org.hibernate:hibernate-core:6.5.2.Final'
+
+    // AWS S3
+    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 
     implementation group: 'com.github.docker-java', name: 'docker-java', version: '3.2.8'
     implementation 'com.github.docker-java:docker-java-transport-okhttp:3.2.8'
