--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -30,5 +30,5 @@ cloud:
     region:
       static: ap-northeast-2
     credentials:
-      access-key: ${PROD_S3_ACCESS_KEY}
-      secret-key: ${PROD_S3_SECRET_KEY}
+      access-key: ${PROD_AWS_ACCESS_KEY}
+      secret-key: ${PROD_AWS_SECRET_KEY}
