Test: Github Action을 활용하여 CI/CD를 테스트 하기위한 커밋
- deploy.yml 수정

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,6 +33,11 @@ jobs:
           echo ${DOCKERHUB_ACCESS_TOKEN} | docker login -u ${DOCKERHUB_USERNAME} --password-stdin
           docker push ${DOCKERHUB_USERNAME}/webide3ever:latest
 
+      - name: Add SSH Key
+        uses: webfactory/ssh-agent@v0.5.3
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+
       - name: Deploy to EC2
         env:
           PROD_DB_URL: ${{ secrets.PROD_DB_URL }}
