--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,10 +56,10 @@ jobs:
           DOCKERHUB_ACCESS_TOKEN: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
         run: |
           ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_PUBLIC_IP }} << 'EOF'
-          docker pull ${DOCKERHUB_USERNAME}/webide3ever:latest
-          docker stop springboot || true
-          docker rm springboot || true
-          docker run -d --name springboot \
+          sudo docker pull ${DOCKERHUB_USERNAME}/webide3ever:latest
+          sudo docker stop springboot || true
+          sudo docker rm springboot || true
+          sudo docker run -d --name springboot \
             -e SPRING_PROFILES_ACTIVE=prod,common \
             -e DB_URL=${PROD_DB_URL} \
             -e DB_USERNAME=${PROD_DB_USERNAME} \
