Test: Github Action을 활용하여 CI/CD를 테스트 하기위한 커밋
- deploy.yml 파일 수정

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,9 +57,9 @@ jobs:
         run: |
           ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_PUBLIC_IP }} << 'EOF'
           sudo docker pull ${DOCKERHUB_USERNAME}/webide3ever:latest
-          sudo docker stop latest || true
-          sudo docker rm latest || true
-          sudo docker run -d --name latest \
+          sudo docker stop ${DOCKERHUB_USERNAME}/webide3ever:latest || true
+          sudo docker rm ${DOCKERHUB_USERNAME}/webide3ever:latest || true
+          sudo docker run -d --name ${DOCKERHUB_USERNAME}/webide3ever:latest \
             -e SPRING_PROFILES_ACTIVE=prod,common \
             -e DB_URL=${PROD_DB_URL} \
             -e DB_USERNAME=${PROD_DB_USERNAME} \
