--- a/nginx.conf
+++ b/nginx.conf
@@ -1,12 +1,39 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name 3everide.com www.3everide.com;
 
-    location /api/ {
-        proxy_pass http://127.0.0.1:8080;
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name 3everide.com www.3everide.com;
+
+    ssl_certificate /etc/letsencrypt/live/3everide.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/3everide.com/privkey.pem;
+
+    location / {
+        proxy_pass http://localhost:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+
+        # CORS 설정 추가
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' 'https://3ever.vercel.app';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, DELETE, PUT';
+            add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization';
+            add_header 'Access-Control-Max-Age' 1728000;
+            add_header 'Content-Type' 'text/plain charset=UTF-8';
+            add_header 'Content-Length' 0;
+            return 204;
+        }
+
+        add_header 'Access-Control-Allow-Origin' 'https://3ever.vercel.app';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, DELETE, PUT';
+        add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization';
     }
 }
