Fix: 배포를 위한 코드 수정
- nginx.conf
- add_header 'Access-Control-Allow-Credentials' 'true'; 추가

--- a/nginx.conf
+++ b/nginx.conf
@@ -65,6 +65,7 @@ server {
         add_header 'Access-Control-Allow-Origin' 'https://3ever.vercel.app';
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, DELETE, PUT';
         add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization';
+        add_header 'Access-Control-Allow-Credentials' 'true';
     }
 }
 
