--- a/nginx.conf
+++ b/nginx.conf
@@ -51,21 +51,21 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        # CORS 설정 추가
-        if ($request_method = 'OPTIONS') {
-            add_header 'Access-Control-Allow-Origin' 'https://3ever.vercel.app';
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, DELETE, PUT';
-            add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization';
-            add_header 'Access-Control-Max-Age' 1728000;
-            add_header 'Content-Type' 'text/plain charset=UTF-8';
-            add_header 'Content-Length' 0;
-            return 204;
-        }
-
-        add_header 'Access-Control-Allow-Origin' 'https://3ever.vercel.app';
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, DELETE, PUT';
-        add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization';
-        add_header 'Access-Control-Allow-Credentials' 'true';
+#         # CORS 설정 추가
+#         if ($request_method = 'OPTIONS') {
+#             add_header 'Access-Control-Allow-Origin' 'https://3ever.vercel.app';
+#             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, DELETE, PUT';
+#             add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization';
+#             add_header 'Access-Control-Max-Age' 1728000;
+#             add_header 'Content-Type' 'text/plain charset=UTF-8';
+#             add_header 'Content-Length' 0;
+#             return 204;
+#         }
+#
+#         add_header 'Access-Control-Allow-Origin' 'https://3ever.vercel.app';
+#         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, DELETE, PUT';
+#         add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization';
+#         add_header 'Access-Control-Allow-Credentials' 'true';
     }
 }
 
