--- a/nginx.conf
+++ b/nginx.conf
@@ -39,38 +39,63 @@
 #     }
 # }
 
-# Http를 위한 설정
+# # Http를 위한 설정
+# server {
+#     listen 80;
+#     server_name ec2-3-34-144-78.ap-northeast-2.compute.amazonaws.com;
+#
+#     location /api/ {
+#         proxy_pass http://127.0.0.1:8080;
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#
+#         # CORS 설정 추가
+#          if ($request_method = 'OPTIONS') {
+#             add_header 'Access-Control-Allow-Origin' 'https://3ever.vercel.app';
+#             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, DELETE, PUT';
+#             add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization, X-AUTH-TOKEN, Authorization_Refresh, Access-Control-Allow-Origin, Access-Control-Allow-Credentials';
+#             add_header 'Access-Control-Allow-Credentials' 'true';
+#             add_header 'Access-Control-Expose-Headers' 'Content-Type, X-AUTH-TOKEN, Authorization, Authorization_Refresh, Access-Control-Allow-Origin, Access-Control-Allow-Credentials';
+#             add_header 'Access-Control-Max-Age' 1728000;
+#             add_header 'Content-Type' 'text/plain; charset=UTF-8';
+#             add_header 'Content-Length' 0;
+#             return 204;
+#         }
+#
+#         add_header 'Access-Control-Allow-Origin' 'https://3ever.vercel.app';
+#         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, DELETE, PUT';
+#         add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization, X-AUTH-TOKEN, Authorization_Refresh, Access-Control-Allow-Origin, Access-Control-Allow-Credentials';
+#         add_header 'Access-Control-Allow-Credentials' 'true';
+#         add_header 'Access-Control-Expose-Headers' 'Content-Type, X-AUTH-TOKEN, Authorization, Authorization_Refresh, Access-Control-Allow-Origin, Access-Control-Allow-Credentials';
+#     }
+# }
+
 server {
     listen 80;
     server_name ec2-3-34-144-78.ap-northeast-2.compute.amazonaws.com;
 
     location /api/ {
-        proxy_pass http://127.0.0.1:8080;
+        proxy_pass http://localhost:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        # CORS 설정 추가
-         if ($request_method = 'OPTIONS') {
-            add_header 'Access-Control-Allow-Origin' 'https://3ever.vercel.app';
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, DELETE, PUT';
-            add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization, X-AUTH-TOKEN, Authorization_Refresh, Access-Control-Allow-Origin, Access-Control-Allow-Credentials';
-            add_header 'Access-Control-Allow-Credentials' 'true';
-            add_header 'Access-Control-Expose-Headers' 'Content-Type, X-AUTH-TOKEN, Authorization, Authorization_Refresh, Access-Control-Allow-Origin, Access-Control-Allow-Credentials';
+        # CORS 설정
+        add_header 'Access-Control-Allow-Origin' 'https://3ever.vercel.app';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, DELETE, PUT';
+        add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization, X-AUTH-TOKEN, Authorization_Refresh';
+        add_header 'Access-Control-Allow-Credentials' 'true';
+        add_header 'Access-Control-Expose-Headers' 'Content-Type, X-AUTH-TOKEN, Authorization, Authorization_Refresh';
+
+        if ($request_method = 'OPTIONS') {
             add_header 'Access-Control-Max-Age' 1728000;
             add_header 'Content-Type' 'text/plain; charset=UTF-8';
             add_header 'Content-Length' 0;
             return 204;
         }
-
-        add_header 'Access-Control-Allow-Origin' 'https://3ever.vercel.app';
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, DELETE, PUT';
-        add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization, X-AUTH-TOKEN, Authorization_Refresh, Access-Control-Allow-Origin, Access-Control-Allow-Credentials';
-        add_header 'Access-Control-Allow-Credentials' 'true';
-        add_header 'Access-Control-Expose-Headers' 'Content-Type, X-AUTH-TOKEN, Authorization, Authorization_Refresh, Access-Control-Allow-Origin, Access-Control-Allow-Credentials';
     }
 }
-
-
 
