Fix: cors 설정을 위한 코드 수정
- nginx.conf
- cors 설정을 위한 코드 수정

--- a/nginx.conf
+++ b/nginx.conf
@@ -84,7 +84,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
 
         # CORS 설정
-        add_header 'Access-Control-Allow-Origin' 'https://3ever.vercel.app';
+        add_header 'Access-Control-Allow-Origin' 'http://localhost:3000';
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, DELETE, PUT';
         add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization, X-AUTH-TOKEN, Authorization_Refresh';
         add_header 'Access-Control-Allow-Credentials' 'true';
