--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -75,5 +75,5 @@ jobs:
             -e GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET} \
             -e KAKAO_CLIENT_ID=${KAKAO_CLIENT_ID} \
             -e KAKAO_CLIENT_SECRET=${KAKAO_CLIENT_SECRET} \
-            -p 80:80 ${{ secrets.DOCKERHUB_USERNAME }}/webide3ever:latest
+            -p 80:80 -p 8080:8080 ${{ secrets.DOCKERHUB_USERNAME }}/webide3ever:latest
           EOF
