--- a/nginx.conf
+++ b/nginx.conf
@@ -77,7 +77,7 @@ server {
     server_name ec2-3-34-144-78.ap-northeast-2.compute.amazonaws.com;
 
     location /api/ {
-        proxy_pass http://ec2-3-34-144-78.ap-northeast-2.compute.amazonaws.com:8080;
+        proxy_pass http://ec2-3-34-144-78.ap-northeast-2.compute.amazonaws.com;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
