--- a/nginx.conf
+++ b/nginx.conf
@@ -77,7 +77,12 @@ server {
     server_name ec2-3-34-144-78.ap-northeast-2.compute.amazonaws.com;
 
     location /api/ {
-        proxy_pass http://ec2-3-34-144-78.ap-northeast-2.compute.amazonaws.com:8080;
+
+        proxy_buffer_size          128k;
+        proxy_buffers              4 256k;
+        proxy_busy_buffers_size    256k;
+
+        proxy_pass http://ec2-3-34-144-78.ap-northeast-2.compute.amazonaws.com:80;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
