--- a/nginx.conf
+++ b/nginx.conf
@@ -82,11 +82,17 @@ server {
         proxy_buffers              4 256k;
         proxy_busy_buffers_size    256k;
 
+        proxy_connect_timeout 300; #기본 60s
+        proxy_send_timeout 300; #기본 60s
+        proxy_read_timeout 300; #기본 60s
+        send_timeout 300; #기본 60s
+
         proxy_pass http://3.34.144.78:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+
 
 
         # 실제 요청에 대한 CORS 헤더 설정
