--- a/nginx.conf
+++ b/nginx.conf
@@ -74,7 +74,7 @@
 
 server {
     listen 80;
-    server_name ec2-3-34-144-78.ap-northeast-2.compute.amazonaws.com;
+    server_name _;
 
     location /api/ {
 
