Fix: cors 설정을 위한 코드 수정
- nginx.conf
- 배포 테스트를 위한 코드 수정

--- a/nginx.conf
+++ b/nginx.conf
@@ -95,7 +95,7 @@ server {
 
 
 
-        실제 요청에 대한 CORS 헤더 설정
+#         실제 요청에 대한 CORS 헤더 설정
         add_header 'Access-Control-Allow-Origin' 'http://localhost:3000' always;
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, DELETE, PUT' always;
         add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization, X-AUTH-TOKEN, Authorization_Refresh' always;
