Test: 배포 테스트를 위한 코드 수정
- application-common.yml
- 배포 테스트를 위한 코드 수정

- application-prod.yml
- 배포 테스트를 위한 코드 수정

--- a/src/main/resources/application-common.yml
+++ b/src/main/resources/application-common.yml
@@ -4,6 +4,7 @@ spring:
   config:
     activate:
       on-profile: "common"
+    additional-location: file:/config/
   jpa:
     hibernate:
       ddl-auto: create
