Test: 배포 테스트를 위한 코드 수정
- deploy.yml
- 배포 테스트를 위한 코드 수정

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
           distribution: 'temurin'
 
       - name: Build with Gradle
-        run: ./gradlew bootJar -Dspring.profiles.active=prod,common
+        run: ./gradlew build -Dspring.profiles.active=prod,common
 
       - name: Build Docker image
         run: |
