--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,7 +42,7 @@ jobs:
 
       - name: Deploy to EC2
         env:
-          PROD_DB_URL_ENCODED: ${{ secrets.PROD_DB_URL }}
+          BASE64_ENCODED_APP_YML: ${{ secrets.BASE64_ENCODED_APP_YML }}
           PROD_DB_USERNAME: ${{ secrets.PROD_DB_USERNAME }}
           PROD_DB_PASSWORD: ${{ secrets.PROD_DB_PASSWORD }}
           PROD_S3_BUCKET_NAME: ${{ secrets.PROD_S3_BUCKET_NAME }}
@@ -56,15 +56,14 @@ jobs:
           KAKAO_CLIENT_SECRET: ${{ secrets.KAKAO_CLIENT_SECRET }}
 
         run: |
-          scp -o StrictHostKeyChecking=no src/main/resources/application-prod.yml ubuntu@${{ secrets.EC2_PUBLIC_IP }}:/home/ubuntu/application-prod.yml
           ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_PUBLIC_IP }} << 'EOF'
+          echo $BASE64_ENCODED_APP_YML | base64 --decode > /home/ubuntu/application-prod.yml
           sudo docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
           sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/webide3ever:latest
           if [ $(sudo docker ps -a -q -f name=web-ide-3ever) ]; then
               sudo docker stop web-ide-3ever
               sudo docker rm web-ide-3ever
           fi
-          export PROD_DB_URL=$(echo $PROD_DB_URL_ENCODED | base64 --decode)
           sudo docker run -d --name web-ide-3ever \
             -v /home/ubuntu/application-prod.yml:/config/application-prod.yml \
             -e SPRING_PROFILES_ACTIVE=prod \
