--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
           distribution: 'temurin'
 
       - name: Build with Gradle
-        run: ./gradlew build -Dspring.profiles.active=prod
+        run: ./gradlew build
 
       - name: Build Docker image
         run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/webide3ever:latest .
@@ -57,7 +57,7 @@ jobs:
 
         run: |
           ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_PUBLIC_IP }} << 'EOF'
-          echo $BASE64_ENCODED_APP_YML | base64 --decode > /home/ubuntu/application-prod.yml
+          echo $BASE64_ENCODED_APP_YML | base64 --decode > /home/ubuntu/application.yml
           sudo docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
           sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/webide3ever:latest
           if [ $(sudo docker ps -a -q -f name=web-ide-3ever) ]; then
@@ -65,8 +65,7 @@ jobs:
               sudo docker rm web-ide-3ever
           fi
           sudo docker run -d --name web-ide-3ever \
-            -v /home/ubuntu/application-prod.yml:/config/application-prod.yml \
-            -e SPRING_PROFILES_ACTIVE=prod \
+            -v /home/ubuntu/application.yml:/config/application.yml \
             -e PROD_DB_URL=${PROD_DB_URL} \
             -e PROD_DB_USERNAME=${PROD_DB_USERNAME} \
             -e PROD_DB_PASSWORD=${PROD_DB_PASSWORD} \
