--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
           distribution: 'temurin'
 
       - name: Build with Gradle
-        run: ./gradlew build
+        run: ./gradlew build -Dspring.profiles.active=prod
 
       - name: Build Docker image
         run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/webide3ever:latest .
@@ -42,7 +42,7 @@ jobs:
 
       - name: Deploy to EC2
         env:
-          BASE64_ENCODED_APP_YML: ${{ secrets.BASE64_ENCODED_APP_YML }}
+          PROD_DB_URL: ${{ secrets.PROD_DB_URL }}
           PROD_DB_USERNAME: ${{ secrets.PROD_DB_USERNAME }}
           PROD_DB_PASSWORD: ${{ secrets.PROD_DB_PASSWORD }}
           PROD_S3_BUCKET_NAME: ${{ secrets.PROD_S3_BUCKET_NAME }}
@@ -56,8 +56,8 @@ jobs:
           KAKAO_CLIENT_SECRET: ${{ secrets.KAKAO_CLIENT_SECRET }}
 
         run: |
+          scp -o StrictHostKeyChecking=no src/main/resources/application-prod.yml ubuntu@${{ secrets.EC2_PUBLIC_IP }}:/home/ubuntu/application-prod.yml
           ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_PUBLIC_IP }} << 'EOF'
-          echo $BASE64_ENCODED_APP_YML | base64 --decode > /home/ubuntu/application.yml
           sudo docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
           sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/webide3ever:latest
           if [ $(sudo docker ps -a -q -f name=web-ide-3ever) ]; then
@@ -65,7 +65,8 @@ jobs:
               sudo docker rm web-ide-3ever
           fi
           sudo docker run -d --name web-ide-3ever \
-            -v /home/ubuntu/application.yml:/config/application.yml \
+            -v /home/ubuntu/application-prod.yml:/config/application-prod.yml \
+            -e SPRING_PROFILES_ACTIVE=prod \
             -e PROD_DB_URL=${PROD_DB_URL} \
             -e PROD_DB_USERNAME=${PROD_DB_USERNAME} \
             -e PROD_DB_PASSWORD=${PROD_DB_PASSWORD} \
