--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,19 +64,27 @@ jobs:
               sudo docker rm web-ide-3ever
           fi
           sudo docker run -d --name web-ide-3ever \
-           -p 8080:8080 \
-            ${{ secrets.DOCKERHUB_USERNAME }}/webide3ever:latest \
-            --spring.profiles.active=prod \
-            --spring.datasource.url=${PROD_DB_URL} \
-            --spring.datasource.username=${PROD_DB_USERNAME} \
-            --spring.datasource.password=${PROD_DB_PASSWORD} \
-            --spring.security.oauth2.client.registration.naver.client-id=${NAVER_CLIENT_ID} \
-            --spring.security.oauth2.client.registration.naver.client-secret=${NAVER_CLIENT_SECRET} \
-            --spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID} \
-            --spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET} \
-            --spring.security.oauth2.client.registration.kakao.client-id=${KAKAO_CLIENT_ID} \
-            --spring.security.oauth2.client.registration.kakao.client-secret=${KAKAO_CLIENT_SECRET} \
-            --cloud.aws.s3.bucket-name=${PROD_S3_BUCKET_NAME} \
-            --cloud.aws.credentials.access-key=${PROD_AWS_ACCESS_KEY} \
-            --cloud.aws.credentials.secret-key=${PROD_AWS_SECRET_KEY} \
+            -e SPRING_PROFILES_ACTIVE=prod \
+            -e SPRING_DATASOURCE_URL=${PROD_DB_URL} \
+            -e SPRING_DATASOURCE_USERNAME=${PROD_DB_USERNAME} \
+            -e SPRING_DATASOURCE_PASSWORD=${PROD_DB_PASSWORD} \
+            -e SPRING_DATASOURCE_DRIVER_CLASS_NAME=org.mariadb.jdbc.Driver \
+            -e SPRING_JPA_HIBERNATE_DDL_AUTO=create \
+            -e SPRING_JPA_SHOW_SQL=true \
+            -e SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT=org.hibernate.dialect.MariaDBDialect \
+            -e SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL=true \
+            -e SPRING_JPA_PROPERTIES_HIBERNATE_HIGHLIGHT_SQL=true \
+            -e SPRING_JPA_PROPERTIES_HIBERNATE_USE_SQL_COMMENTS=true \
+            -e SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_NAVER_CLIENT_ID=${NAVER_CLIENT_ID} \
+            -e SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_NAVER_CLIENT_SECRET=${NAVER_CLIENT_SECRET} \
+            -e SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID} \
+            -e SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET} \
+            -e SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_KAKAO_CLIENT_ID=${KAKAO_CLIENT_ID} \
+            -e SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_KAKAO_CLIENT_SECRET=${KAKAO_CLIENT_SECRET} \
+            -e SPRING_CLOUD_AWS_S3_BUCKET_NAME=${PROD_S3_BUCKET_NAME} \
+            -e SPRING_CLOUD_AWS_STACK_AUTO=false \
+            -e SPRING_CLOUD_AWS_REGION_STATIC=ap-northeast-2 \
+            -e SPRING_CLOUD_AWS_CREDENTIALS_ACCESS_KEY=${PROD_AWS_ACCESS_KEY} \
+            -e SPRING_CLOUD_AWS_CREDENTIALS_SECRET_KEY=${PROD_AWS_SECRET_KEY} \
+            -p 8080:8080 ${{ secrets.DOCKERHUB_USERNAME }}/webide3ever:latest
           EOF
