Test: 배포 테스트를 위한 코드 수정
- application-prod.yml
- 배포 테스트를 위한 코드 수정

- deploy.yml
- 배포 테스트를 위한 코드 수정

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -4,7 +4,7 @@ spring:
   config:
     activate:
       on-profile: "prod"
-    additional-location: file:/config/
+    location: file:/config/
   jpa:
     hibernate:
       ddl-auto: create
