--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,9 +1,9 @@
 spring:
   application:
     name: WebIDE
+  profiles:
+    active: "prod"
   config:
-    activate:
-      on-profile: "prod"
     location: file:/config/
   jpa:
     hibernate:
@@ -70,6 +70,7 @@ spring:
             token-uri: https://kauth.kakao.com/oauth/token
             user-info-uri: https://kapi.kakao.com/v2/user/me
             user-name-attribute: id
+
 logging:
   level:
     org:
