Test: 배포 테스트를 위한 코드 수정
- nginx.conf
- 배포 테스트를 위한 코드 수정

--- a/nginx.conf
+++ b/nginx.conf
@@ -76,7 +76,7 @@ server {
     listen 80;
     server_name ec2-3-34-144-78.ap-northeast-2.compute.amazonaws.com;
 
-    location /api/ {
+    location /api {
 
         proxy_buffer_size 128k;
         proxy_buffers 4 256k;
