Test: 배포 테스트를 위한 코드 수정
- nginx.conf
- 배포 테스트를 위한 코드 수정

--- a/nginx.conf
+++ b/nginx.conf
@@ -96,7 +96,7 @@ server {
 
 
         # 실제 요청에 대한 CORS 헤더 설정
-        add_header 'Access-Control-Allow-Origin' 'https://3ever.vercel.app, http://localhost:3000' always;
+        add_header 'Access-Control-Allow-Origin' 'http://localhost:3000' always;
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, DELETE, PUT' always;
         add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization, X-AUTH-TOKEN, Authorization_Refresh' always;
         add_header 'Access-Control-Allow-Credentials' 'true' always;
@@ -104,7 +104,7 @@ server {
 
         # CORS 설정
         if ($request_method = 'OPTIONS') {
-            add_header 'Access-Control-Allow-Origin' 'https://3ever.vercel.app, http://localhost:3000';
+            add_header 'Access-Control-Allow-Origin' 'http://localhost:3000';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, DELETE, PUT';
             add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization, X-AUTH-TOKEN, Authorization_Refresh';
             add_header 'Access-Control-Allow-Credentials' 'true';
