Test: 배포 테스트를 위한 코드 수정
- nginx.conf
- 배포 테스트를 위한 코드 수정

--- a/nginx.conf
+++ b/nginx.conf
@@ -96,16 +96,16 @@ server {
 
 
         # 실제 요청에 대한 CORS 헤더 설정
-        add_header 'Access-Control-Allow-Origin' 'http://localhost:3000' always;
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, DELETE, PUT' always;
+        add_header 'Access-Control-Allow-Origin' 'https://3ever.vercel.app' always;
+        add_header 'Access-Control-Allow-Methods' '*' always;
         add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization, X-AUTH-TOKEN, Authorization_Refresh' always;
         add_header 'Access-Control-Allow-Credentials' 'true' always;
         add_header 'Access-Control-Expose-Headers' 'Content-Type, X-AUTH-TOKEN, Authorization, Authorization_Refresh' always;
 
         # CORS 설정
         if ($request_method = 'OPTIONS') {
-            add_header 'Access-Control-Allow-Origin' 'http://localhost:3000';
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, DELETE, PUT';
+            add_header 'Access-Control-Allow-Origin' 'https://3ever.vercel.app'
+            add_header 'Access-Control-Allow-Methods' '*';
             add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization, X-AUTH-TOKEN, Authorization_Refresh';
             add_header 'Access-Control-Allow-Credentials' 'true';
             add_header 'Access-Control-Max-Age' 1728000;
