Test: 배포 테스트를 위한 코드 수정
- 배포 테스트를 위한 코드 수정

--- a/nginx.conf
+++ b/nginx.conf
@@ -94,7 +94,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
 
          # 실제 요청에 대한 CORS 헤더 설정
-        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Origin' 'https://3ever.vercel.app' always;
         add_header 'Access-Control-Allow-Methods' '*' always;
         add_header 'Access-Control-Allow-Headers' '*' always;
         add_header 'Access-Control-Allow-Credentials' 'true' always;
@@ -102,7 +102,7 @@ server {
 
         # CORS 설정
         if ($request_method = 'OPTIONS') {
-            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Origin' 'https://3ever.vercel.app';
             add_header 'Access-Control-Allow-Methods' '*';
             add_header 'Access-Control-Allow-Headers' '*';
             add_header 'Access-Control-Allow-Credentials' 'true';
