Test: 배포 테스트를 위한 코드 수정
- 배포 테스트를 위한 코드 수정

--- a/nginx.conf
+++ b/nginx.conf
@@ -113,6 +113,9 @@ server {
             return 204;
         }
 
+        error_log /var/log/nginx/error.log;
+        access_log /var/log/nginx/access.log;
+
 
 #         # 실제 요청에 대한 CORS 헤더 설정
 #         add_header 'Access-Control-Allow-Origin' 'https://3ever.vercel.app' always;
