Test: 배포 테스트를 위한 코드 수정
- 배포 테스트를 위한 코드 수정

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,7 +61,7 @@ jobs:
 
       # Push Docker images
       - name: Push Docker image for Spring Boot app
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/webide3ever:backend-latest:latest
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/webide3ever:backend-latest
 
       - name: Push Docker image for React app
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/webide3ever:frontend-latest
