Test: 배포 테스트를 위한 코드 수정
- 배포 테스트를 위한 코드 수정

--- a/web-ide-front/nginx.conf
+++ b/web-ide-front/nginx.conf
@@ -7,6 +7,6 @@ server {
     }
 
     location ^~ /api {
-        proxy_pass http://localhost:8080;
+        proxy_pass http://ec2-52-79-123-145.ap-northeast-2.compute.amazonaws.com:8080;
     }
 }
